hphp/test/zend/good/Zend/tests/traits/error_014.php.expectf

Fatal error: Cannot override final method baz::test() in %s/error_014.php on line 11
